2009-06-09  Jaroslav Hajek  <highegg@gmail.com>

	* lo-mappers.cc (xlog2 (const Complex&, int&), xlog2 (const
	FloatComplex&, int&)): Use more robust expression.

2009-06-07  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::find): Avoid allocating excessive memory. Fix
	order for backward searches.

2009-06-02  Jaroslav Hajek  <highegg@gmail.com>

	* Array-C.cc (class DiagArray2<Complex>::Proxy): Only explicitly
	instantiate DiagArray2<T>::Proxy on MSVC.
	* Array-d.cc (class DiagArray2<double>::Proxy): Ditto.
	* Array-f.cc (class DiagArray2<float>::Proxy): Ditto.
	* Array-fC.cc (class DiagArray2<FloatComplex>::Proxy): Ditto.

2009-05-26  John W. Eaton  <jwe@octave.org>

	* pathsearch.h (dir_path::path_sep_char (char),
	dir_path::static_members::path_sep_char (char)): New functions.

2009-05-21  Michael Goffioul  <michael.goffioul@gmail.com>

	* Array-C.cc (class DiagArray2<Complex>::Proxy): Tag with OCTAVE_API.
	* Array-d.cc (class DiagArray2<double>::Proxy): Ditto.
	* Array-f.cc (class DiagArray2<float>::Proxy): Ditto.
	* Array-fC.cc (class DiagArray2<FloatComplex>::Proxy): Ditto.
	* Array.cc (class octave_sort<T>): Ditto.
	* CColVector.h (conj, operator*, operator>>, operator<<): Ditto.
	* CDiagMatrix.h (class ComplexDiagMatrix, conj, operator*): Ditto.
	* CMatrix.h (conj): Ditto.
	* CNDArray.h (conj): Ditto.
	* PermMatrix.h (class PermMatrix, operator*): Ditto.
	* dDiagMatrix.h (class DiagMatrix): Ditto.
	* fCColVector.h (conj, operator*, operator>>, operator<<): Ditto.
	* fCDiagMatrix.h (class FloatComplexDiagMatrix, conj, operator*):
	Ditto.
	* fCMatrix.h (conj): Ditto.
	* fCNDArray.h (conj): Ditto.
	* fDiagMatrix.h (operator*): Ditto.
	* oct-locbuf.h (octave_chunk_buffer::octave_chunk_buffer,
	octave_chunk_buffer::~octave_chunk_buffer): Ditto.
	* oct-inttypes.cc (octave_int_cmp_op::emulate_op): Ditto.
	* DET.h (class base_det<T>): Remove OCTAVE_API (cannot be applied on
	templates).